==> beegee-tokyo/SX126x-Arduino/src/boards/esp32/sx126x-board.cpp <==
#include <Arduino.h>
#include "board.h"
#include "radio/sx126x/sx126x.h"
#include "sx126x-board.h"

	void SX126xIoIrqInit(DioIrqHandler dioIrq)
	{
		attachInterrupt(PIN_LORA_DIO_1, dioIrq, RISING);
		// GpioSetInterrupt(&SX126x.DIO1, IRQ_RISING_EDGE, IRQ_HIGH_PRIORITY, dioIrq);
	}

	void SX126xIoDeInit(void)
	{
		detachInterrupt(PIN_LORA_DIO_1);
		pinMode(PIN_LORA_NSS, INPUT);
		pinMode(PIN_LORA_BUSY, INPUT);
		pinMode(PIN_LORA_DIO_1, INPUT);
		pinMode(PIN_LORA_RESET, INPUT);
		// GpioInit(&SX126x.Spi.Nss,	PIN_LORA_NSS,		PIN_INPUT, PIN_PUSH_PULL, PIN_NO_PULL, 0);
		// GpioInit(&SX126x.BUSY,	PIN_LORA_BUSY,		PIN_INPUT, PIN_PUSH_PULL, PIN_NO_PULL, 0);
		// GpioInit(&SX126x.DIO1,	PIN_LORA_DIO_1, 	PIN_INPUT, PIN_PUSH_PULL, PIN_NO_PULL, 0);
	}

	void SX126xReset(void)
	{
		DelayMs(10);
		digitalWrite(PIN_LORA_RESET, LOW);
		// GpioInit(&SX126x.Reset, PIN_LORA_RESET, PIN_OUTPUT, PIN_PUSH_PULL, PIN_NO_PULL, 0);
		DelayMs(20);
		digitalWrite(PIN_LORA_RESET, HIGH);
		// GpioInit(&SX126x.Reset, PIN_LORA_RESET, PIN_INPUT, PIN_PUSH_PULL, PIN_NO_PULL, 0); // internal pull-up
		DelayMs(10);
	}

	void SX126xWaitOnBusy(void)
	{
		// TODO this can lead to an endless loop !!!! Better to add a timeout
		//  while (digitalRead(PIN_LORA_BUSY) == HIGH);

		// TODO solution with timeout, waits 1000 x 1ms for BUSY to go low
		int timeout = 10000;
		while (digitalRead(PIN_LORA_BUSY) == HIGH)
		{
			DelayMs(1);
			timeout -= 1;
			if (timeout < 0)
			{
				log_e("Timeout waiting for BUSY low");
				return;
			}
		}
	}

	void SX126xWakeup(void)
	{
		BoardDisableIrq();

		digitalWrite(PIN_LORA_NSS, LOW);
		// GpioWrite(&SX126x.Spi.Nss, 0);

		SPI.beginTransaction(spiSettings);
		// SpiInOut(&SX126x.Spi, RADIO_GET_STATUS);
		// SpiInOut(&SX126x.Spi, 0x00);
		SPI.endTransaction();
		digitalWrite(PIN_LORA_NSS, HIGH);
		// GpioWrite(&SX126x.Spi.Nss, 1);

		// Wait for chip to be ready.
		SX126xWaitOnBusy();

		BoardEnableIrq();
	}

	void SX126xReadCommand(RadioCommands_t command, uint8_t *buffer, uint16_t size)
	{
		SX126xCheckDeviceReady();

		digitalWrite(PIN_LORA_NSS, LOW);
		// GpioWrite(&SX126x.Spi.Nss, 0);

		SPI.beginTransaction(spiSettings);
		SPI.transfer((uint8_t)command);
		SPI.transfer(0x00);
		// SpiInOut(&SX126x.Spi, (uint8_t)command);
		// SpiInOut(&SX126x.Spi, 0x00);
		for (uint16_t i = 0; i < size; i++)
		{
			buffer[i] = SPI.transfer(0x00);
			// buffer[i] = SpiInOut(&SX126x.Spi, 0);
		}

		SPI.endTransaction();
		digitalWrite(PIN_LORA_NSS, HIGH);
		// GpioWrite(&SX126x.Spi.Nss, 1);

		SX126xWaitOnBusy();
	}

	void SX126xAntSwOn(void)
	{
#ifdef DSP4520
		SX126xDio3Control(true);
#endif
	}

	void SX126xAntSwOff(void)
	{
#ifdef DSP4520
		SX126xDio3Control(false);
#endif
	}
